--- a/src/App.less
+++ b/src/App.less
@@ -64,15 +64,31 @@ body {
             display: flex;
             height: 500px;
             .titleLanding{
+                box-shadow: 0px 0px 50px rgba(0,0,0,1);
                 margin: 0 auto;
                 width: 90%;
+                display: flex;
+                justify-content: flex-end;
+                align-items: flex-end;
                 .footerBanner{
                     display: flex;
                     flex-direction: row;
                     width: 100%;
+                    position: relative;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-bottom: -50px;
+                }
+                h3{
+                    color:#fff;
+                    font-size: 40px;
+                    font-weight: bolder;
+                    width: 50%;
+                    margin-left: 50px;
                 }
                 img.logo-big{
                     height: 100px;
+                    margin-right: 50px;
                 }
             }
         }
