--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -20,4 +20,5 @@ header .container .navigation-links a {
   color: #fff;
   margin-left: 40px;
   font-weight: 900;
+  mix-blend-mode: difference;
 }
