--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -21,6 +21,7 @@ header{
                 color:#fff;
                 margin-left: 40px;
                 font-weight: 900;
+                mix-blend-mode: difference;
             }
         }
     }
