--- a/src/App.less
+++ b/src/App.less
@@ -16,6 +16,9 @@ body {
             justify-content: center;
             align-items: center;
         }
+        .toUp{
+            margin-top: -200px !important;
+        }
         .initialSection{
             display: flex;
             flex-direction: row;
@@ -89,6 +92,118 @@ body {
                 img.logo-big{
                     height: 100px;
                     margin-right: 50px;
+                }
+            }
+        }
+
+        .meSection{
+            width: 100%;
+            display: flex;
+            height: 500px;
+            justify-content: center;
+            align-items: center;
+            .titleLanding{
+                width: 50%;
+                margin: 0 auto;
+                background: #080808;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                .meImg{
+                    display: block;
+                    height: 500px;
+                    width: 50%;
+                    mix-blend-mode: lighten !important;
+                }
+            }
+            .textMe{
+                width: 50%;
+                p{
+                    color: #fff;
+                    font-size: 18px;
+                    line-height: 28px;
+                    width: 50%;
+                }
+            }
+        }
+
+        .projects{
+            .carousel{
+                margin: 0 auto;
+                width: 100% !important;
+                .slide{
+                    min-width: 80% !important;
+                    margin: 0 10% !important;
+                    background:  transparent !important;
+                }
+                .control-arrow {
+                    top: 44%;
+                    color: #000;
+                    font-size: 30px;
+                    bottom: 0;
+                    margin: 0 30px;
+                    padding: 0;
+                    height: 50px !important;
+                    background: #fff;
+                    border-radius: 50%;
+                    width: 50px !important;
+                    opacity: 1 !important;
+                    &:hover{
+                        opacity: 0.5;
+                        transition: all ease 0.3s;
+                    }
+                }
+                .control-prev.control-arrow:before {
+                    border-right: 8px solid #000 !important;
+                }
+                .control-next.control-arrow:before {
+                    border-left: 8px solid #000 !important;
+                }
+
+                .control-arrow:before, .carousel.carousel-slider .control-arrow:before {
+                    margin: 3px 5px !important;
+                }
+            }
+            .contentProject{
+                background: #fff;
+                padding: 70px;
+                display: flex;
+                justify-content: center;
+                //height: 600px;
+                flex-direction: row;
+                .infoProject{
+                    text-align: left;
+                    width: 50%;
+                    h4{
+                        font-size: 50px;
+                        text-transform: lowercase;
+                        margin-bottom: 30px;
+                    }
+                    p{
+                        opacity: 0.7;
+                        font-size: 20px;
+                        line-height: 28px;
+                    }
+                    p.rolesPr{
+                        margin: 30px 0;
+                    }
+                    p.titlePr{
+                        opacity: 1 !important;
+                        font-size: 30px;
+                        margin-bottom: 30px;
+                    }
+                }
+                .imageContentProject{
+                    display: flex;
+                    justify-content: flex-end;
+                    text-align: right;
+                    width: 50%;
+                    img{
+                        position: absolute;
+                        width: 60% !important;
+                        right: -50px;
+                        margin-top: -50px;
+                    }
                 }
             }
         }
