All complete, there is no links to behance

--- a/src/App.less
+++ b/src/App.less
@@ -3,6 +3,7 @@
     margin: 0;
     font-size: 100%;
     font-family: Product Sans;
+    text-decoration: none;
 }
 body {
     background: #080808;
@@ -16,6 +17,8 @@ body {
             justify-content: center;
             align-items: center;
         }
+
+        // To Format Height
         .toUp{
             margin-top: -200px !important;
         }
@@ -23,15 +26,42 @@ body {
         .pr{
             margin-top: -400px !important;
         }
+
+        .last{
+            margin-top: -400px !important;
+        }
+
         .initialSection{
             display: flex;
             flex-direction: row;
+            max-width: 1000px;
             width: 90%;
             .titleLanding{
                 width: 50%;
                 h1{
                     color: #fff;
                     font-size: 50px;
+                }
+                a{
+                    display: block;
+                    margin-top: 10vh;
+                    position: absolute;
+                    cursor:pointer;
+                    &:hover{
+                        transition: all ease .3s;
+                        opacity: 0.5;
+                    }
+                    &:active{
+                        opacity: 0.3;
+                    }
+                    img{
+                        height: 50px;
+                        filter: invert(1);
+                        position: initial;
+                        width: auto !important;
+                        right: 0;
+                        margin: 0;
+                    }
                 }
             }
             .mockupsBanner{
@@ -92,6 +122,7 @@ body {
                     font-weight: bolder;
                     width: 50%;
                     margin-left: 50px;
+                    z-index: 10;
                 }
                 img.logo-big{
                     height: 100px;
@@ -135,6 +166,7 @@ body {
             .carousel{
                 margin: 0 auto;
                 width: 100% !important;
+                max-width: 1600px;
                 .slide{
                     min-width: 80% !important;
                     margin: 0 10% !important;
@@ -197,12 +229,15 @@ body {
                 padding: 70px;
                 display: flex;
                 justify-content: center;
-                height: 550px;
+                height: 600px;
                 flex-direction: row;
                 .infoProject{
                     text-align: left;
                     width: 50%;
                     z-index: 9;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
                     h4{
                         font-size: 50px;
                         text-transform: lowercase;
@@ -236,12 +271,110 @@ body {
                         right: -50px;
                         margin-top: -50px;
                     }
+                    a.btnProject{
+                        border-radius: 50px;
+                        padding:15px 25px;
+                        display: flex;
+                        flex-direction: row;
+                        position: absolute;
+                        align-self: flex-end;
+                        transition: all ease 0.3s;
+                        &:hover{
+                            filter: brightness(1.5);
+                            transition: all ease 0.3s;
+                            box-shadow: 0px 0px 50px rgba(0,0,0,0.5);
+                        }
+                        span{
+                            color:#fff;
+                            margin-right: 10px;
+                            font-size: 16px;
+                        }
+                        img{
+                            height: 20px;
+                            filter: invert(1);
+                            position: initial;
+                            width: auto !important;
+                            right: 0;
+                            margin: 0;
+                        }
+                    }
                 }
             }
         }
 
         footer{
-            background: #f00;
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            width: 80%;
+            .up{
+                display: flex;
+                background: #fff;
+                box-sizing: border-box;
+                padding:70px 50px;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                .right{
+                    text-align: left;
+                    border-right: 2px solid rgba(0,0,0,0.5);
+                    padding: 30px 50px 30px 0;
+                    margin-right: 50px;
+                    width: 50%;
+                    p{
+                        font-size: 40px;
+                        font-weight: bolder;
+                        text-align: left;
+                    }
+                }
+                .left{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    width: 50%;
+                    p.colorsLinks{
+                        a{
+                            color:#f00
+                        }
+                    }
+                    p{
+                        font-weight: bolder;
+                    }
+                    p.externalLinks{
+                        display: flex;
+                        flex-direction: column;
+                        margin-left: 50px;
+                        
+                        a{
+                            color:#080808;
+                        }
+                    }
+                }
+            }
+            .down{
+                padding:50px 0;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                a.logoL{
+                    margin-right: 40px;
+                    img{
+                        margin-top: 5px;
+                        height: 50px;
+                    }
+                }
+                .infoFooter{
+                    display: flex;
+                    flex-direction: column;
+                    p, a{
+                        color: #fff;
+                        font-size: 14px;
+                    }
+                }
+            }
         }
     }
 }
