--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0;
   font-size: 100%;
   font-family: Product Sans;
+  text-decoration: none;
 }
 body {
   background: #080808;
@@ -24,9 +25,13 @@ body .juandis .toUp {
 body .juandis .pr {
   margin-top: -400px !important;
 }
+body .juandis .last {
+  margin-top: -400px !important;
+}
 body .juandis .initialSection {
   display: flex;
   flex-direction: row;
+  max-width: 1000px;
   width: 90%;
 }
 body .juandis .initialSection .titleLanding {
@@ -35,6 +40,27 @@ body .juandis .initialSection .titleLanding {
 body .juandis .initialSection .titleLanding h1 {
   color: #fff;
   font-size: 50px;
+}
+body .juandis .initialSection .titleLanding a {
+  display: block;
+  margin-top: 10vh;
+  position: absolute;
+  cursor: pointer;
+}
+body .juandis .initialSection .titleLanding a:hover {
+  transition: all ease 0.3s;
+  opacity: 0.5;
+}
+body .juandis .initialSection .titleLanding a:active {
+  opacity: 0.3;
+}
+body .juandis .initialSection .titleLanding a img {
+  height: 50px;
+  filter: invert(1);
+  position: initial;
+  width: auto !important;
+  right: 0;
+  margin: 0;
 }
 body .juandis .initialSection .mockupsBanner {
   width: 50%;
@@ -91,6 +117,7 @@ body .juandis .photosSection .titleLanding h3 {
   font-weight: bolder;
   width: 50%;
   margin-left: 50px;
+  z-index: 10;
 }
 body .juandis .photosSection .titleLanding img.logo-big {
   height: 100px;
@@ -129,6 +156,7 @@ body .juandis .meSection .textMe p {
 body .juandis .projects .carousel {
   margin: 0 auto;
   width: 100% !important;
+  max-width: 1600px;
 }
 body .juandis .projects .carousel .slide {
   min-width: 80% !important;
@@ -181,13 +209,16 @@ body .juandis .projects .contentProject {
   padding: 70px;
   display: flex;
   justify-content: center;
-  height: 550px;
+  height: 600px;
   flex-direction: row;
 }
 body .juandis .projects .contentProject .infoProject {
   text-align: left;
   width: 50%;
   z-index: 9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 body .juandis .projects .contentProject .infoProject h4 {
   font-size: 50px;
@@ -222,6 +253,102 @@ body .juandis .projects .contentProject .imageContentProject img {
   right: -50px;
   margin-top: -50px;
 }
+body .juandis .projects .contentProject .imageContentProject a.btnProject {
+  border-radius: 50px;
+  padding: 15px 25px;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  align-self: flex-end;
+  transition: all ease 0.3s;
+}
+body .juandis .projects .contentProject .imageContentProject a.btnProject:hover {
+  filter: brightness(1.5);
+  transition: all ease 0.3s;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+}
+body .juandis .projects .contentProject .imageContentProject a.btnProject span {
+  color: #fff;
+  margin-right: 10px;
+  font-size: 16px;
+}
+body .juandis .projects .contentProject .imageContentProject a.btnProject img {
+  height: 20px;
+  filter: invert(1);
+  position: initial;
+  width: auto !important;
+  right: 0;
+  margin: 0;
+}
 body .juandis footer {
-  background: #f00;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 80%;
+}
+body .juandis footer .up {
+  display: flex;
+  background: #fff;
+  box-sizing: border-box;
+  padding: 70px 50px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+body .juandis footer .up .right {
+  text-align: left;
+  border-right: 2px solid rgba(0, 0, 0, 0.5);
+  padding: 30px 50px 30px 0;
+  margin-right: 50px;
+  width: 50%;
+}
+body .juandis footer .up .right p {
+  font-size: 40px;
+  font-weight: bolder;
+  text-align: left;
+}
+body .juandis footer .up .left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 50%;
+}
+body .juandis footer .up .left p.colorsLinks a {
+  color: #f00;
+}
+body .juandis footer .up .left p {
+  font-weight: bolder;
+}
+body .juandis footer .up .left p.externalLinks {
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+}
+body .juandis footer .up .left p.externalLinks a {
+  color: #080808;
+}
+body .juandis footer .down {
+  padding: 50px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+body .juandis footer .down a.logoL {
+  margin-right: 40px;
+}
+body .juandis footer .down a.logoL img {
+  margin-top: 5px;
+  height: 50px;
+}
+body .juandis footer .down .infoFooter {
+  display: flex;
+  flex-direction: column;
+}
+body .juandis footer .down .infoFooter p,
+body .juandis footer .down .infoFooter a {
+  color: #fff;
+  font-size: 14px;
 }
