--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -3,4 +3,6 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
+  -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
 }
