Projects components updated

--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -1,8 +1,9 @@
 * {
+  -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
+  -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
   font-family: 'europa', sans-serif;
   margin: 0;
   padding: 0;
   text-decoration: none;
-  -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
-  -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
+  transition: all ease 0.3s;
 }
