Responsive styled updated

--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -2,9 +2,16 @@
   -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
   -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
   font-family: 'europa', sans-serif;
+  font-size: 20px;
   font-display: swap;
   margin: 0;
   padding: 0;
   text-decoration: none;
   transition: all ease 0.3s;
+}
+
+@media screen and (max-width: 540px) {
+  * {
+    font-size: 18px;
+  }
 }
