--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -1,17 +1,30 @@
+@font-face {
+  font-family: 'San Francisco Pro Display';
+  font-weight: 400;
+  src: url(/assets/fonts/sf-pro-display_regular.woff2);
+}
+
+@font-face {
+  font-family: 'San Francisco Pro Display';
+  font-weight: 500;
+  src: url(/assets/fonts/sf-pro-display_semibold.woff2);
+}
+
+@font-face {
+  font-family: 'San Francisco Pro Display';
+  font-weight: 600;
+  src: url(/assets/fonts/sf-pro-display_bold.woff2);
+}
+
 * {
   -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
   -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
-  font-family: 'europa', sans-serif;
-  font-size: 20px;
+  font-family: 'San Francisco Pro Display', Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
   font-display: swap;
   margin: 0;
   padding: 0;
   text-decoration: none;
   transition: all ease 0.3s;
-}
-
-@media screen and (max-width: 540px) {
-  * {
-    font-size: 18px;
-  }
 }
