--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -20,11 +20,74 @@
   -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
   -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
   font-family: 'San Francisco Pro Display', Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
   font-display: swap;
   margin: 0;
   padding: 0;
   text-decoration: none;
   transition: all ease 0.3s;
+}
+
+/* Headlines */
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+h2 {
+  font-size: 48px;
+  line-height: 60px;
+}
+
+h3 {
+  font-size: 32px;
+  line-height: 40px;
+}
+
+@media screen and (max-width: 724px) {
+  h1 {
+    font-size: 56px;
+    line-height: 64px;
+  }
+  
+  h2 {
+    font-size: 40px;
+    line-height: 52px;
+  }
+  
+  h3 {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
+
+/* Paragraphs */
+
+p.text-huge {
+  font-size: 24px;
+  line-height: 32px;
+}
+
+p.text-large {
+  font-size: 20px;
+  line-height: 28px;
+}
+
+p.text-medium {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+p.text-small {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+p.text-caption {
+  font-size: 12px;
+  line-height: 16px;
 }
