Styles Project Content

--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -44,8 +44,23 @@ h2 {
 }
 
 h3 {
+  font-size: 40px;
+  line-height: 52px;
+}
+
+h4 {
+  font-size: 36px;
+  line-height: 44px;
+}
+
+h5 {
   font-size: 32px;
   line-height: 40px;
+}
+
+h6 {
+  font-size: 28px;
+  line-height: 36px;
 }
 
 @media screen and (max-width: 724px) {
@@ -60,8 +75,23 @@ h3 {
   }
   
   h3 {
-    font-size: 30px;
+    font-size: 36px;
+    line-height: 44px;
+  }
+
+  h4 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  
+  h5 {
+    font-size: 28px;
     line-height: 36px;
+  }
+  
+  h6 {
+    font-size: 24px;
+    line-height: 32px;
   }
 }
 
